feat: 로그 추가 및 키워드 관련 트러블슈팅